# probity-api

./: .gitignore  CHANGELOG.md  CONFORMANCE.md  CONTRIBUTING.md  DOCS.md  LICENSE  PROTOCOL_FREEZE.md  QUICKSTART.md  README.md  SECURITY.md  SPECS.md  example.py
cli/probity-view/: README.md  pyproject.toml
cli/probity-view/probity_view/: __main__.py  exporter.py  io.py  render.py  verify.py
cli/probity-view/probity_view.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: 00-introduction.md  01-evidence-semantics.md  GLOSSARY.md  how-organizations-use-probity.md
examples/: README.md  basic-pre.json  external-snapshot.json  integrity-mismatch.json  late-record.json  minimal-pre.json
reference/: README.md  canonicalize.py  hash.py  jcs_rfc8785.py  verifier.py
schemas/: README.md  coverage-declaration.schema.json  decision-snapshot.schema.json  identity-object.schema.json  integrity-ref.schema.json  lineage-link.schema.json  pre-envelope.schema.json  signature-object.schema.json  verifier-output.schema.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: minimal_record.py
sdk/python/probity/: constants.py  errors.py  hashing.py  helpers.py  integrity.py  jcs_rfc8785.py  recorder.py  snapshot.py  timeutil.py  wrappers.py
sdk/python/probity.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/probity/adapters/anthropic/: __init__.py  messages.py
sdk/python/probity/adapters/openai/: __init__.py  chat_completions.py
test-vectors/: README.md
tools/: generate_verification_test_vectors.py  run_verification_vectors.py
(+96 files in other folders)
